--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: false
 
 cache:
   bundler: true
+  directories:
+    - /home/travis/.rvm/gems
 
 rvm:
   - 2.4.1
@@ -31,18 +33,21 @@ before_install:
   - gem update bundler
 
 install:
-  - bundle install --jobs=3 --retry=3
-  - git clone https://github.com/rails/rails.git ~/build/rails
+  - git clone --branch $RAILS_VERSION https://github.com/rails/rails.git ~/build/rails
+
+before_script:
   - pushd ~/build/rails
-  - git checkout $RAILS_VERSION
+  - git status
   - sed -i "s/Gem.ruby, '-w'/Gem.ruby, '-w0'/" ~/build/rails/activerecord/Rakefile
   - sed -i "s/t.warning = true/t.warning = false/g" ~/build/rails/activerecord/Rakefile
   - sed -i "/require 'support\/connection'/a \$LOAD_PATH.unshift\(File.expand_path\('~\/build\/malomalo\/activerecord-sort\/lib'\)\)\nrequire 'active_record/sort'" ~/build/rails/activerecord/test/cases/helper.rb
   - cat ~/build/rails/Gemfile
-  - "sed -i \"/group :db do/a gem 'activerecord-sort', require: 'active_record/sort', path: File.expand_path\\('~\\/build\\/malomalo\\/activerecord-sort'\\)\" ~/build/rails/Gemfile"
+  - rm ~/build/rails/Gemfile.lock
+  - "sed -i \"/# Active Record./a gem 'activerecord-sort', require: 'active_record/sort', path: File.expand_path\\('~\\/build\\/malomalo\\/activerecord-sort'\\)\" ~/build/rails/Gemfile"
   - cat ~/build/rails/Gemfile
   - bundle install --jobs=3 --retry=3
   - popd
+  - bundle install --jobs=3 --retry=3
 
 script:
   - bundle exec rake test
