--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,9 @@ rvm:
 
 env:
   matrix:
-    - RAILS_VERSION=v6.0.0.rc1 GEM=activerecord:mysql2
-    - RAILS_VERSION=v6.0.0.rc1 GEM=activerecord:sqlite3
-    - RAILS_VERSION=v6.0.0.rc1 GEM=activerecord:postgresql
-    - RAILS_VERSION=v6.0.0.rc2 GEM=activerecord:mysql2
-    - RAILS_VERSION=v6.0.0.rc2 GEM=activerecord:sqlite3
-    - RAILS_VERSION=v6.0.0.rc2 GEM=activerecord:postgresql
+    - RAILS_VERSION=v6.0.0 GEM=activerecord:mysql2
+    - RAILS_VERSION=v6.0.0 GEM=activerecord:sqlite3
+    - RAILS_VERSION=v6.0.0 GEM=activerecord:postgresql
 
 services:
   - mysql
