--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,16 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - name: Install Postgresql
+        run: |
+          sudo apt-get install curl ca-certificates gnupg
+          curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          sudo apt-get update
+          sudo apt-get install postgresql-13
+          sudo systemctl start postgresql@13-main.service
+          sudo -u postgres createuser runner --superuser
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.0
