--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,59 +7,96 @@ on:
     branches: [ master ]
 
 jobs:
-  sunstone:
+  test:
     name: ActiveRecord::Sort Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        rails-version:
+          - 7.1
+          - 7.2
+          - 8.0
+        ruby-version:
+          - 3.2
+          - 3.3
+          - 3.4
+          - 3.5.0-preview1
+        postgres-version:
+          - 17
 
     steps:
       - name: Install Postgresql
         run: |
+          sudo apt-get -y --purge remove $(sudo apt list --installed | grep postgresql | awk '{print $1}')
           sudo apt-get install curl ca-certificates gnupg
           curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           sudo apt-get update
-          sudo apt-get install postgresql-13
-          sudo systemctl start postgresql@13-main.service
+          sudo apt-get -y install postgresql-${{ matrix.postgres-version }}-postgis-3
+          sudo systemctl start postgresql@${{ matrix.postgres-version }}-main.service
+          sudo systemctl status postgresql@${{ matrix.postgres-version }}-main.service
+          sudo pg_lsclusters
           sudo -u postgres createuser runner --superuser
+          sudo -u postgres psql -c "ALTER USER runner WITH PASSWORD 'runner';"
+
+      - uses: actions/checkout@v4
+
+      - name: Add logger for Ruby 3.5 (no longer bundled gem, drop when rails adds)
+        run: |
+          echo ""  >> Gemfile
+          echo 'gem "logger"' >> Gemfile
+          echo ""  >> Gemfile
+          echo 'gem "benchmark"' >> Gemfile
+
+      - run: |
+          echo ""  >> Gemfile
+          echo 'gem "rails", "${{ matrix.rails-version }}"' >> Gemfile
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0
-
-      - uses: actions/checkout@v2
-
-      - run: bundle
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - run: bundle exec rake test
 
   ar-postgresql:
     name: ActiveRecord PostgresQL Test
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        rails: [v6.1.3]
-        
-    runs-on: ubuntu-20.04
+        ruby-version:
+          - 3.4
+        rails-version:
+          - v8.0.1
+        postgres-version:
+          - 17
 
     steps:
       - name: Install Postgresql
         run: |
+          sudo apt-get -y --purge remove $(sudo apt list --installed | grep postgresql | awk '{print $1}')
           sudo apt-get install curl ca-certificates gnupg
           curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           sudo apt-get update
-          sudo apt-get install postgresql-13
-          sudo systemctl start postgresql@13-main.service
+          sudo apt-get -y install postgresql-${{ matrix.postgres-version }}-postgis-3
+          sudo systemctl start postgresql@${{ matrix.postgres-version }}-main.service
+          sudo systemctl status postgresql@${{ matrix.postgres-version }}-main.service
+          sudo pg_lsclusters
           sudo -u postgres createuser runner --superuser
+          sudo -u postgres psql -c "ALTER USER runner WITH PASSWORD 'runner';"
+
+      - uses: actions/checkout@v4
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0
-          
-      - uses: actions/checkout@v2
-    
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+
       - name: Download Rails
         run: |
-          git clone --branch ${{ matrix.rails }} https://github.com/rails/rails.git ~/rails
+          git clone --branch ${{ matrix.rails-version }} https://github.com/rails/rails.git ~/rails
           pushd ~/rails
           cat /home/runner/work/_temp/*.sh
           sed -i "s/Gem.ruby, '-w'/Gem.ruby, '-w0'/" ~/rails/activerecord/Rakefile
@@ -77,22 +114,29 @@ jobs:
           
   ar-sqlite:
     name: ActiveRecord SQLite Test
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        rails: [v6.1.3]
-        
-    runs-on: ubuntu-20.04
+        ruby-version:
+          - 3.4
+        rails-version:
+          - v8.0.1
 
     steps:
+      - uses: actions/checkout@v4
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.0
           
-      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
     
       - name: Download Rails
         run: |
-          git clone --branch ${{ matrix.rails }} https://github.com/rails/rails.git ~/rails
+          git clone --branch ${{ matrix.rails-version }} https://github.com/rails/rails.git ~/rails
           pushd ~/rails
           cat /home/runner/work/_temp/*.sh
           sed -i "s/Gem.ruby, '-w'/Gem.ruby, '-w0'/" ~/rails/activerecord/Rakefile
@@ -113,11 +157,13 @@ jobs:
         
   ar-mysql:
     name: ActiveRecord MySQL Test
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        rails: [v6.1.3]
-        
-    runs-on: ubuntu-20.04
+        ruby-version:
+          - 3.4
+        rails-version:
+          - v8.0.1
 
     steps:
       - name: Install MySQL
@@ -126,15 +172,16 @@ jobs:
           mysql -uroot -proot -e "CREATE USER 'rails'@'%';"
           mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'rails'@'%' WITH GRANT OPTION;"
 
+      - uses: actions/checkout@v4
+
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0
-          
-      - uses: actions/checkout@v2
-    
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+
       - name: Download Rails
         run: |
-          git clone --branch ${{ matrix.rails }} https://github.com/rails/rails.git ~/rails
+          git clone --branch ${{ matrix.rails-version }} https://github.com/rails/rails.git ~/rails
           pushd ~/rails
           cat /home/runner/work/_temp/*.sh
           sed -i "s/Gem.ruby, '-w'/Gem.ruby, '-w0'/" ~/rails/activerecord/Rakefile
